--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 
 <ul>
 <li><a href="https://github.com/JonathanVentura" class="user-mention">@JonathanVentura</a></li>
+<li><a href="https://github.com/andyp13" class="user-mention">@andyp13</a></li>
 <li>
-<a href="https://github.com/andyp13" class="user-mention">@andyp13</a>
+<a href="https://github.com/ultrahooligan" class="user-mention">@ultrahooligan</a>
 (Will update with rest of team)</li>
 </ul>
 
