Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 <ul>
 <li><a href="https://github.com/JonathanVentura" class="user-mention">@JonathanVentura</a></li>
 <li><a href="https://github.com/andyp13" class="user-mention">@andyp13</a></li>
-<li>
-<a href="https://github.com/ultrahooligan" class="user-mention">@ultrahooligan</a>
-(Will update with rest of team)</li>
+<li><a href="https://github.com/ultrahooligan" class="user-mention">@ultrahooligan</a></li>
+<li>(Will update with rest of team)</li>
 </ul>
 
 <h3>
